// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check the Connector function Create one Component it should be updated the connector component when the exists state by the Context will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated the connector component when the exists state by the Context will be updated 2`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated the connector component when the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated the connector component when the props will be updated 2`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated the connector component when the state by the Context will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated the connector component when the state by the Context will be updated 2`] = `
<span>
  Moin
  Bye
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the props and then the state will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the props and then the state will be updated 2`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the props and then the state will be updated 3`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the state and then the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the state and then the props will be updated 2`] = `
<span>
  Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create one Component it should be updated twice the connector component when first the state and then the props will be updated 3`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the props will be updated 2`] = `
<span>
  Hello
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the props will be updated 3`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the props will be updated 4`] = `
<span>
  Good morning
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the state by the Context will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the state by the Context will be updated 2`] = `
<span>
  Hello
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the state by the Context will be updated 3`] = `
<span>
  Moin
  Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated the connector components when the state by the Context will be updated 4`] = `
<span>
  Hello
  Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 2`] = `
<span>
  Hello
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 3`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 4`] = `
<span>
  Good morning
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 5`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the props and then the state will be updated 6`] = `
<span>
  Good morning
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 2`] = `
<span>
  Hello
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 3`] = `
<span>
  Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 4`] = `
<span>
  Hello
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 5`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function Create two Components it should be updated twice the connector components when first the state and then the props will be updated 6`] = `
<span>
  Good morning
  Bye Bye
</span>
`;

exports[`Check the Connector function it should be create a connector component when connector() is called with a component 1`] = `
<span>
  Moin
</span>
`;
